src/vis/style.css
body { margin:0;top:0;right:0;bottom:0;left:0; }
pre { width: 100%; height: 100%; font-size: 10px; overflow-y: scroll; }
#some {background-color: #B6FFD4}
#json {background-color: antiquewhite}
#plot {margin-top: -55px;}
#axis {background-color: #fff; }
#axis.sticky{
    position: fixed;
    top: 0;
    height: 50px;
}
text {
    font-family: "Helvetica Neue", Helvetica, sans-serif;
    fill: #000;
    font-size: 10px;
}

svg {

    padding-top: 30px;
    fill: black;
}
.genus{
    font-family: sans-serif;
    font-size: 10px;
    fill: black;
}
#onGenusClick{
    stroke: darkslategray;
    height: 50px;
    width: 50px;
}

.trackLine{
    stroke:#231f20;
    stroke-width: 1px;
    pointer-events: none;
}

h1{font-family: Arial;
    font-size: 29px;
}

#begunok{
    fill: #fff;
    border: 1px solid #B6FFD4;
    width: 70px;
    height: 20px;
    font-size: 10px;

}
#begunok text{fill:#000;}

.rec_fam{
    opacity:0.2;
    fill:cornflowerblue;
    rx:3px;
    ry:3px;
}

.rec_invisible{opacity: 0;}

.rec_subfam{
    opacity:0.5;
    fill: greenyellow;
    rx:3px;
    ry:3px;
}

text.epicOrderName{
    font-size: 47px;
    color:#231f20;
    opacity: 0.2;
    text-anchor: middle;
    letter-spacing: 23.7px;
    font-family: "Times New Roman";
    text-transform: uppercase;
}

